# thrift_cppDemo

./: CMakeLists.txt  README.md  tutorial.thrift
src/: cppClient.cpp  cppServer.cpp
